[tool.poetry]
name = "forex-api"
version = "0.1.0"
description = ""
authors = ["reinanbr <perseu912@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
forex-python = "^1.9.2"
kitano = "^0.0.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
